k8s_manifests/frontend/deployment.yaml
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todo-lab
  labels:
    app: todo-frontend
    env: dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: frontend
        image: 148761661491.dkr.ecr.us-east-1.amazonaws.com/mern-frontend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: frontend-port
          containerPort: 80

        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf

        livenessProbe:
          httpGet:
            path: /health
            port: frontend-port
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: frontend-port
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "256Mi"
            cpu: "250m"

      volumes:
      - name: nginx-config
        configMap:
          name: frontend-config
