k8s_manifests/frontend/ingress.yaml
# Frontend + Backend Ingress (AWS ALB)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: "todo-group"

    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/idle-timeout: "120"

spec:
  ingressClassName: alb
  rules:
  - host: todo.example.com
    http:
      paths:

        # Backend API (Must be listed FIRST or used with specific path)
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port:
                number: 8080

        # Frontend App (Matches everything else)
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                number: 80
